<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acme.a3csci3130.CreateContactAcitivity">

    <EditText
        android:id="@+id/Province"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-389dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="234dp"
        android:hint="Province"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Address"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-401dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="195dp"
        android:hint="Address(less than 50 characters)"

        android:maxLength="49"

        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/PrimaryBusiness"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-389dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="152dp"
        android:hint="Primary Business"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/BusinessNumber"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-368dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="109dp"

        android:hint="Business Number(9-digit number)"

        android:digits="1234567890"
        android:maxLength="9"

        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"

        android:hint="Name(no more than 48 characters)"
        android:maxLength="48"

        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:hint="e-mail"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Contact"
        android:layout_marginTop="204dp"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"

        android:onClick="submitInfoButton"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.502" />

</android.support.constraint.ConstraintLayout>
